--- a/FE/flower_store/src/style/body.css
+++ b/FE/flower_store/src/style/body.css
@@ -1,8 +1,7 @@
 .main-title {
     text-align: center;
-    color: #3f426e;
-    font-size: 36px;
-    font-weight: bold;
+    color: #5e5c4d;
+    font-size: 30px;
     font-family: 'Lora', cursive;
     margin-top: 50px;
 }
