--- a/FE/flower_store/src/style/footer.css
+++ b/FE/flower_store/src/style/footer.css
@@ -1,8 +1,9 @@
 
 .footer-area {
     padding: 40px 0;
-    background-color: #3f426e;
+    background-color: #e7bab0;
     color: #fff;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, serif;
 }
 
 .footer-area a {
@@ -23,11 +24,11 @@
 
 .copyright-area {
     padding: 14px 0;
-    background-color: #282c34;
+    background-color: #eee;
 }
 
 .copyright-area p {
-    color: #fff;
+    color: #282c34;
     height: 100%;
     padding-top: 16px;
 }
@@ -44,4 +45,8 @@
 
 .text-white:hover {
     text-decoration: underline;
+}
+
+.social-media a, .social-media i{
+    color: #282c34;
 }
