--- a/FE/flower_store/src/style/header.css
+++ b/FE/flower_store/src/style/header.css
@@ -1,22 +1,23 @@
 /*header*/
 .header {
     box-sizing: border-box;
+    background-color: whitesmoke;
 }
 
 /*notification*/
 .notification {
     height: 27%;
     color: white;
-    background-color: #007ACC;
-    /*background-image: linear-gradient(90deg, #97e7f5 0%, #009ed1 50%, #7dd449 100%);*/
+    background-color: #e7bab0;
     display: flex;
 }
 
 .notification-text {
     width: 100%;
     align-self: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif, serif;
     text-align: center;
-    font-size: 12px;
+    font-size: 11px;
 }
 
 /*vertical line*/
@@ -31,20 +32,20 @@
     margin-right: 5px;
 }
 
-.login-btn-main-page, .cart-header {
-    outline: 3px #007ACC solid;
+.login-btn-main-page, .cart-btn-header {
+    outline: 3px #e7bab0 solid;
     outline-offset: -3px;
     border: 1px solid #ffffff;
     border-radius: 15px;
     background-color: transparent;
-    color: #007ACC;
+    color: #e7bab0;
     transition: .3s ease-out;
     font-size: 16px;
-    width: 90px;
+    width: 60px;
 }
 
-.login-btn-main-page:hover, .cart-header:hover {
-    background-color: #007ACC;
+.login-btn-main-page:hover, .cart-btn-header:hover, #scrollToTop:hover {
+    background-color: #e7bab0;
     color: white;
 }
 
@@ -53,6 +54,7 @@
 .navbar-text {
     padding-right: 30px;
     font-family: 'Pacifico', cursive;
+    color: #e7bab0;
 }
 
 /*logo img*/
@@ -70,5 +72,37 @@
 @media screen and (max-width: 960px) {
     .vertical-line {
         display: none;
+    }
+}
+
+.nav-link {
+    font-family: "Bookman Old Style", sans-serif;
+}
+
+/*back to top btn*/
+#scrollToTop {
+    position: fixed;
+    left: 95%;
+    bottom: 5%;
+    outline: 3px #e7bab0 solid;
+    outline-offset: -3px;
+    border: 1px solid #ffffff;
+    border-radius: 3px;
+    background-color: #eeeeee;
+    color: #e7bab0;
+    transition: .3s ease-out;
+    font-size: 16px;
+    width: 45px;
+}
+
+@media screen and (max-width: 992px) {
+    #scrollToTop {
+        left: 90%;
+    }
+}
+@media screen and (max-width: 576px) {
+    #scrollToTop {
+        left: 85%;
+        z-index: 1;
     }
 }
