--- a/FE/flower_store/src/style/signup.css
+++ b/FE/flower_store/src/style/signup.css
@@ -1,5 +1,4 @@
-/**/
-#wrapper {
+#signup-wrapper {
     box-sizing: border-box;
     text-decoration: none;
     position: absolute;
@@ -12,11 +11,10 @@
     background-repeat: no-repeat;
 }
 
-/**/
-.main-form {
+.signup-main-form {
     position: relative;
     left: 50%;
-    top: 14%;
+    top: 10%;
     transform: translateX(-50%);
     width: 36%;
     height: auto;
@@ -26,8 +24,7 @@
     backdrop-filter: blur(63px);
 }
 
-/**/
-.login-title {
+.signup-title {
     padding-top: 2%;
     text-align: center;
     color: #282c34;
@@ -36,21 +33,35 @@
     font-family: 'Lora', cursive;
 }
 
-/**/
-.login-form {
+.signup-form {
     text-align: center;
     color: white;
     padding-right: 5%;
     padding-left: 5%;
 }
 
-.form-child-unit, .form-child-btn {
+.signup-form-child-unit, .signup-form-child-btn {
     padding-top: 4%;
     margin-top: 1%;
 }
 
-/*login, login with facebook button*/
-.login-btn, .fb-login-tag {
+.signup-input-tag {
+    height: 45px;
+    width: 100%;
+    border-radius: 10px;
+    border: none;
+    font-size: 16px;
+    padding-left: 15px;
+    font-weight: bold;
+    font-family: 'Lora', cursive;
+}
+
+.signup-input-tag::placeholder {
+    color: rgba(0, 0, 0, 0.3);
+    font-weight: bold;
+}
+
+.signup-cancel-btn {
     color: #282c34;
     margin-top: 1%;
     border: 1px solid #ffffff;
@@ -71,67 +82,54 @@
     font-family: 'Lora', cursive;
 }
 
-.login-btn:hover, .fb-login-tag:hover {
-    background-color: #282c34;
+.signup-confirm-btn {
     color: #e7bab0;
-}
-
-
-/*facebook icon */
-.fa-facebook {
-    font-size: 17px;
-}
-
-/*username and password field*/
-.input-tag {
-    height: 45px;
+    margin-top: 1%;
+    border: 1px solid #ffffff;
+    border-radius: 19px;
+    vertical-align: center;
+    height: 50px;
     width: 100%;
-    border-radius: 10px;
-    border: none;
-    font-size: 16px;
-    padding-left: 15px;
+    text-transform: uppercase;
+    cursor: pointer;
     font-weight: bold;
+    font-size: 17px;
+    box-shadow: rgba(0, 0, 0, 0.18) 0 2px 4px;
+    transition: 400ms;
+    outline: 3px #282c34 solid;
+    outline-offset: -3px;
+    gap: 15px;
+    background-color: #5e5c4d;
     font-family: 'Lora', cursive;
 }
 
-.input-tag::placeholder {
-    color: rgba(0, 0, 0, 0.3);
-    font-weight: bold;
+.signup-confirm-btn:hover {
+    color: #e7bab0;
+    background-color: #282c34;
 }
 
-.input-tag:focus {
-    outline: none;
-    border: none;
-}
 
-/*option*/
-.a-link {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-.a-link:hover {
-    text-decoration: underline;
+.signup-cancel-btn:hover {
+    background-color: #e7bab0;
     color: #282c34;
 }
 
 
 /*responsive*/
 @media screen and (max-width: 1280px) {
-    .main-form {
+    .signup-main-form {
         width: 90%;
     }
 }
 
 @media screen and (max-width: 992px) {
-    .main-form {
+    .signup-main-form {
         width: 90%;
     }
 }
 
-
 @media screen and (max-width: 480px) {
-    .main-form {
+    .signup-main-form {
         position: relative;
         left: 50%;
         top: 0;
@@ -141,55 +139,5 @@
         border-radius: 0;
         backdrop-filter: blur(.3);
         padding-bottom: 15px;
-        background-image: url("https://images.alphacoders.com/304/3041.png");
-        background-size: cover;
-        background-repeat: no-repeat;
     }
-
-
-    .a-link {
-        color: #282c34;
-        text-decoration: none;
-    }
-
-    #back-to-main-div {
-        display: block;
-    }
-
-    .login-form {
-        padding-top: 85%;
-        text-align: center;
-        color: white;
-        padding-right: 5%;
-        padding-left: 5%;
-    }
-}
-
-/*button vertical spacing*/
-.login-btn-div {
-    padding-top: 3%;
-}
-
-.login-with-fb-btn {
-    padding-top: 1%;
-}
-
-.login-text {
-    font-family: 'Pacifico', cursive;
-    color: #ffffff;
-}
-
-/*facebook icon in login button*/
-.fb-icon {
-    color: white;
-}
-
-.form-child-option {
-    font-size: 18px;
-    padding-top: 3%;
-}
-
-/*error msg*/
-.form-err-msg {
-    color: rgba(255, 153, 29, 0.86);
 }
