--- a/FE/flower_store/src/style/login.css
+++ b/FE/flower_store/src/style/login.css
@@ -53,7 +53,6 @@
 .login-btn, .fb-login-tag {
     color: #282c34;
     margin-top: 1%;
-    border: 1px solid #ffffff;
     border-radius: 19px;
     vertical-align: center;
     height: 50px;
@@ -64,8 +63,7 @@
     font-size: 17px;
     box-shadow: rgba(0, 0, 0, 0.18) 0 2px 4px;
     transition: 400ms;
-    outline: 3px #282c34 solid;
-    outline-offset: -3px;
+    border: 3px #282c34 solid;
     gap: 15px;
     background-color: transparent;
     font-family: 'Lora', cursive;
@@ -76,6 +74,10 @@
     color: #e7bab0;
 }
 
+.login-btn:after {
+    background-color: #282c34;
+    color: #e7bab0;
+}
 
 /*facebook icon */
 .fa-facebook {
@@ -126,6 +128,7 @@
 @media screen and (max-width: 992px) {
     .main-form {
         width: 90%;
+        background-repeat: repeat;
     }
 }
 
@@ -137,15 +140,13 @@
         top: 0;
         transform: translateX(-50%);
         width: 100%;
-        height: 100%;
         border-radius: 0;
         backdrop-filter: blur(.3);
         padding-bottom: 15px;
         background-image: url("https://images.alphacoders.com/304/3041.png");
         background-size: cover;
-        background-repeat: no-repeat;
+        background-repeat: repeat;
     }
-
 
     .a-link {
         color: #282c34;
