--- a/FE/flower_store/src/style/body.css
+++ b/FE/flower_store/src/style/body.css
@@ -4,4 +4,12 @@
     font-size: 30px;
     font-family: 'Lora', cursive;
     margin-top: 50px;
+    cursor: default;
+}
+
+.body-main-page {
+    position: relative;
+    top: 86px;
+    background-image: radial-gradient(73% 147%, #EADFDF 59%, #ECE2DF 100%), radial-gradient(91% 146%, rgba(255, 255, 255, 0.50) 47%, rgba(0, 0, 0, 0.50) 100%);
+    background-blend-mode: screen;
 }
