--- a/FE/flower_store/src/style/products.css
+++ b/FE/flower_store/src/style/products.css
@@ -2,20 +2,33 @@
     min-height: 600px;
 }
 
+/*card*/
+
 .my-card {
     transition: .2s;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     overflow: hidden;
+    max-height: 500px;
 }
 .my-card:hover {
     cursor: pointer;
     box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
     scale: 1.02;
 }
+
+.my-card:hover:after {
+    position: absolute;
+    content: attr(title);
+    display: inline-block;
+    left: 0;
+    top: 0;
+    background-color: rgba(94, 92, 77, .7);
+    color: #e7bab0;
+}
 .my-card-btn {
     background-color: white;
     outline: none;
-    font-size: 30px;
+    font-size: 20px;
     border: 1px #e7bab0 solid;
     border-radius: 8px;
     transition: .3s ease;
@@ -24,5 +37,97 @@
 }
 .my-card-btn:hover {
     background-color: #e7bab0;
+    color: white;
+}
+
+.product-card-title {
+    color: #5e5c4d;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* number of lines to show */
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+    font-size: 15px;
+}
+
+
+/*search with option*/
+.product-type-search-div {
+    width: 100%;
+    display: flex;
+    gap: 1%;
+}
+
+.product-type-btn {
+    height: 120%;
+    background-color: #eee;
+    border: 1px solid #e7bab0;
+    border-radius: 8px;
+    transition: .2s ease-in;
+}
+
+.product-type-btn:hover {
+    border: 1px solid #5e5c4d;
+}
+
+.product-type-btn:focus {
+    background-color: #5e5c4d;
+    color: #eee;
+}
+
+.search-option {
+    border: 1px solid #e7bab0;
+    height: 100%;
+    border-radius: 5px;
+}
+
+.search-option:focus {
+    outline: none;
+}
+
+.search-input {
+    border: none;
+    border-bottom: 1px solid #e7bab0;
+}
+
+.search-input::placeholder {
+    color: #9e9e9e;
+}
+
+.search-input:focus {
+    outline: none;
+}
+@media screen and (max-width: 1200px){
+    .product-type-search-div {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 768px){
+    .product-type-search-div {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 576px){
+    .my-card {
+        width: 60%;
+        margin: auto;
+    }
+}
+
+/*product with type*/
+.search-btn {
+    margin: auto;
+    background-color: #ffffff;
+    color: #5e5c4d;
+    border: 1px solid #5e5c4d;
+    border-radius: 5px;
+    transition: .2s ease-in;
+}
+
+.search-btn:hover {
+    background-color: #e7bab0;
+    border: 1px solid #e7bab0;
     color: white;
 }
