--- a/FE/flower_store/src/style/header.css
+++ b/FE/flower_store/src/style/header.css
@@ -56,6 +56,7 @@
     border-radius: 9px;
     color: #5e5c4d;
     font-size: 22px;
+    transition: .3s;
 }
 
 #cart-badge {
@@ -100,6 +101,7 @@
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
     padding-right: 0.5rem;
+
 }
 
 .header-dropdown {
@@ -124,6 +126,7 @@
     font-family: 'Pacifico', cursive;
     text-align: center;
     display: block;
+    transition: .2;
 }
 
 .header-dropdown-content .dropdown-child:hover, .logout-btn:hover {
@@ -142,6 +145,7 @@
     width: 100%;
     padding: 5px 16px;
     font-family: 'Pacifico', cursive;
+    transition: .2s;
 }
 
 /*logo img*/
@@ -171,15 +175,14 @@
     position: fixed;
     left: 95%;
     bottom: 5%;
-    outline: 3px #e7bab0 solid;
-    outline-offset: -3px;
-    border: 1px solid #ffffff;
+    border: 2px #e7bab0 solid;
     border-radius: 3px;
     background-color: #eeeeee;
     color: #e7bab0;
     transition: .3s ease-out;
     font-size: 16px;
     width: 45px;
+    z-index: 1;
 }
 
 @media screen and (max-width: 992px) {
@@ -247,7 +250,7 @@
 
 .logout-modal-body {
     font-family: Lora, 'sans-serif';
-    font-size: 18px;
+    font-size: 15px;
 }
 
 /*nav link active/un-active*/
@@ -256,16 +259,15 @@
     font-weight: normal;
     padding-left: 15px;
     text-decoration: none;
-    color: #282c34;
-    font-family: "Tahoma", sans-serif;
+    font-family: "Lora", sans-serif;
+    color: #9e9e9e;
 }
 
 .my-nav-link-active {
     padding-left: 15px;
     text-decoration: none;
-    font-family: "Tahoma", sans-serif;
-    color: #282c34;
-    font-weight: bold;
+    font-family: "Lora", sans-serif;
+    color: #5e5c4d;
 }
 
 
