--- a/FE/flower_store/src/style/login.css
+++ b/FE/flower_store/src/style/login.css
@@ -7,7 +7,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-image: url("https://images.alphacoders.com/304/3041.png");
+    background-image: url("../../public/login-bg.png");
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -143,7 +143,7 @@
         border-radius: 0;
         backdrop-filter: blur(.3);
         padding-bottom: 15px;
-        background-image: url("https://images.alphacoders.com/304/3041.png");
+        background-image: url("../../public/login-bg.png");
         background-size: cover;
         background-repeat: repeat;
     }
