--- a/FE/flower_store/src/style/products.css
+++ b/FE/flower_store/src/style/products.css
@@ -44,6 +44,33 @@
     color: white;
 }
 
+@media screen and (max-width: 576px) {
+    .my-card {
+        max-width: 300px;
+        margin-right: auto;
+        margin-left: auto;
+    }
+
+    .product-type-search-div-child {
+        width: 100%;
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        margin-top: 5px;
+    }
+
+    .search-option,
+    .search-input,
+    .search-type-btn {
+        width: 200px;
+    }
+    .search-type-input {
+        min-width: 200px;
+    }
+}
+
+/**/
+
 .product-card-title {
     color: #5e5c4d;
     overflow: hidden;
@@ -141,7 +168,7 @@
 
 }
 
-@media screen and (max-width: 576px) {
+@media screen and (max-width: 768px) {
     .product-type-search-div {
         max-width: 400px;
         display: flex;
@@ -165,12 +192,15 @@
         margin: auto;
         display: grid;
     }
+
     .price-sort {
-        ;
         place-self: center;
     }
+
     .product-list {
         padding-left: 15%;
         padding-right: 15%;
     }
 }
+
+/*product type*/
