--- a/FE/flower_store/src/style/cart.css
+++ b/FE/flower_store/src/style/cart.css
@@ -208,3 +208,39 @@
 .cart-product-name:hover {
     text-decoration: underline;
 }
+/*order msg*/
+.order-msg-input {
+    width: 80%;
+    margin: auto;
+}
+.order-msg-btn-cancel, .order-msg-btn-confirm {
+    width: 26%;
+    height: 36px;
+    border: 1px solid #5e5c4d;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+    transition: .2s ease;
+}
+
+.order-msg-btn-confirm {
+    background-color: #e7bab0;
+    color: #eee;
+}
+
+.order-msg-btn-cancel:hover {
+    background-color: #eee;
+    color: #5e5c4d;
+}
+
+.order-msg-btn-confirm:hover {
+    background-color: #5e5c4d;
+}
+
+.order-msg-input {
+    border: 1px solid #5e5c4d;
+    border-radius: 8px;
+    width: 100%;
+}
+.order-msg-input:focus {
+    outline: none;
+}
