--- a/FE/flower_store/src/style/products.css
+++ b/FE/flower_store/src/style/products.css
@@ -137,6 +137,7 @@
     border: none;
     border-bottom: 1px solid #e7bab0;
     background-color: #eee;
+    padding-left: 10px;
 }
 
 .search-input::placeholder {
